--- a/style.css
+++ b/style.css
@@ -73,3 +73,47 @@ color: red;
 .search-button:active{
     color: blue;
 }
+main{
+    padding-block: 20px;
+    margin-top: 80px;
+}
+#news-img{
+    
+    width: 300px;
+    height: 200px;
+}
+.card-container{
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    align-items: start;
+    margin-left: 25px;
+   
+}
+.card{
+    width: 300px;
+    min-height: 400px;
+    box-shadow: 0px 0px 4px lightgray;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: aliceblue;
+    overflow: hidden;
+    margin-top: 40px;
+    transition: all 0.30s ease-in;
+}
+.card:hover{
+    box-shadow: 4px 4px 4px lightskyblue;
+    transform: translateY(-10px);
+}
+
+.card-header img{
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+}
+.card-contant{
+    padding: 12px;
+}
+.news-source{
+    margin-block: 12px;
+}
